Fix the position of drag thumbnail when the scale settings is not 100%.
The thumbnail of an image file is a squared image. This is implemented as an
image in a square container. The non square image is cropped
by the square container, but the hidden part of the image causes unwated
position gap of the dragging thumbnail.

Previously we handle the gap by adding 1000px padding for the thumbnail. But the
padding causes another bug when the browser is shown in non 100% scale. This CL
stops to add 1000px padding. Instead, to handle the unwanted gap, the CL let
Files.app copy the image to a square canvas. For the solution, we don't need to
crop an image by a square canvas because the canvas itself is square, and thus we
are free from position gap problem.

BUG=339179
TEST=manually
R=mtomasz@chromium.org

Review URL: https://codereview.chromium.org/338253003

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@277993 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 413417567689137b1528d498e32f4c7f36ea5f50

--- a/ui/file_manager/file_manager/foreground/css/file_manager.css
+++ b/ui/file_manager/file_manager/foreground/css/file_manager.css
@@ -1317,8 +1317,6 @@ body[overlay-visible] > :not(.overlay-pane) {
 /* Invisible container for elements representing files while dragging. */
 #drag-container {
   left: 0;
-  /* Hack for extra margins caused by setDragImage(). */
-  padding: 1000px 0 0 1000px;
   position: fixed;
   top: 0;
   z-index: -1;  /* below .dialog-container */
@@ -1331,6 +1329,7 @@ body[overlay-visible] > :not(.overlay-pane) {
   border-radius: 3px;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .2);
   display: -webkit-box;
+  line-height: 0;
   margin-bottom: 5px;
   padding: 6px;
   transition: opacity 200ms ease-in;
@@ -1343,18 +1342,6 @@ body[overlay-visible] > :not(.overlay-pane) {
 #drag-container .thumbnail-item {
   -webkit-box-orient: horizontal;
   display: -webkit-box;
-}
-
-/* When changing these properties please preserve these conditions:
-   1. width == height (so that the rotated thumbnail does not look off-center)
-   2. width % 8 == 0 (to minimize rounding errors in the centering code) */
-#drag-container .img-container {
-  -webkit-box-flex: 0;
-  display: -webkit-box;
-  height: 64px;
-  overflow: hidden;
-  position: relative;
-  width: 64px;
 }
 
 #drag-container .label {
